troca de titulo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class= 'menusbase'>
             <a class= 'menus'href="https://www.nike.com.br/sc/feito-pra-jogar" target="_blank"> Carrinho</a>
             <a class= 'menus' href="https://www.nike.com.br/tenis-air-jordan-1-zoom-comfort-2-masculino-024677.html?cor=ID#163&u_utm_referrer=https%3A%2F%2Fwww.google.com%2F&u_gclid=EAIaIQobChMI29qnl6Cs_QIVNRXUAR0NGwhkEAAYASAAEgLLevD_B " target="_blank"> Sobre nós</a>
-            <a class= 'menus' href="https://www.nike.com.br/sc/feminino-1" target="_blank">Femininos</a>
+            <a class= 'menus' href="https://www.nike.com.br/sc/feminino-1" target="_blank">Feminino</a>
             <a class= 'menus' href="https://www.nike.com.br/sc/masculino-1" target="_blank"> Masculinos</a>
         </nav>
   </nav>
